[patch] added condition to install odh or rhoai

--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -377,6 +377,7 @@ spec:
         - db2-aiservice
         - minio
         - aiservice-odh
+        - aiservice-rhoai
 
     # 15. Verify health of the cluster before we consider the install complete
     # -------------------------------------------------------------------------
