--- a/tekton/src/pipelines/taskdefs/aiservice/rhoai.yml.j2
+++ b/tekton/src/pipelines/taskdefs/aiservice/rhoai.yml.j2
@@ -30,3 +30,6 @@
     - input: "$(params.aiservice_channel)"
       operator: notin
       values: [""]
+    - input: "$(params.rhoai)"
+      operator: in
+      values: ["true"]
