--- a/tekton/src/pipelines/taskdefs/aiservice/odh.yml.j2
+++ b/tekton/src/pipelines/taskdefs/aiservice/odh.yml.j2
@@ -22,6 +22,8 @@
       value: $(params.custom_labels)
     - name: aiservice_odh_model_deployment_type
       value: $(params.aiservice_odh_model_deployment_type)
+    - name: rhoai
+      value: $(params.rhoai)
 
   taskRef:
     name: mas-devops-aiservice-odh
