--- a/tekton/src/tasks/common/cli-env.yml.j2
+++ b/tekton/src/tasks/common/cli-env.yml.j2
@@ -18,3 +18,21 @@
       optional: true
 - name: DEVOPS_SUITE_NAME
   value: $(params.devops_suite_name)
+- name: SLACK_TOKEN
+  valueFrom:
+    secretKeyRef:
+      name: mas-devops
+      key: SLACK_TOKEN
+      optional: true
+- name: SLACK_CHANNEL
+  valueFrom:
+    secretKeyRef:
+      name: mas-devops
+      key: SLACK_CHANNEL
+      optional: true
+- name: PIPELINE_NAMESPACE
+  value: $(context.pipelineRun.namespace)
+- name: PIPELINERUN_NAME
+  value: $(context.pipelineRun.name)
+- name: PIPELINE_NAME
+  value: $(context.pipeline.name)
