--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -203,6 +203,12 @@ spec:
       runAfter:
         - cert-manager
 
+    # 4.6 Redhat Openshift AI ( for AI Service )
+    # -------------------------------------------------------------------------
+    {{ lookup('template', pipeline_src_dir ~ '/taskdefs/aiservice/rhoai.yml.j2', template_vars={'application': 'aiservice'}) | indent(4) }}
+      runAfter:
+        - cert-manager
+
     # 5. Install & Configure IBM MAS
     # -------------------------------------------------------------------------
     # 5.1 Configure Workspace
