--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -127,6 +127,9 @@ spec:
         - name: devops_suite_name
           value: backup-mongodb
 
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+          
         - name: mongodb_backup_version
           value: $(params.backup_version)
         - name: mongodb_action
