--- a/tekton/src/tasks/upload-backup-archive.yml.j2
+++ b/tekton/src/tasks/upload-backup-archive.yml.j2
@@ -60,9 +60,9 @@ spec:
         value: $(params.backup_version)
 
       # S3 credentials
-      - name: AWS_ACCESS_KEY_ID
+      - name: S3_ACCESS_KEY_ID
         value: $(params.aws_access_key_id)
-      - name: AWS_SECRET_ACCESS_KEY
+      - name: S3_SECRET_ACCESS_KEY
         value: $(params.aws_secret_access_key)
       - name: S3_BUCKET_NAME
         value: $(params.s3_bucket_name)
