--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
@@ -1,6 +1,8 @@
 merge-key: {{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ MAS_INSTANCE_ID }}
 ibm_dbs_rds_databases:
-  - host: <path:{{ SECRETS_PATH }}:{{ HOST }}>
+  - db2_namespace: {{ DB2_NAMESPACE }}
+    db2_instance_name: {{ DB2_INSTANCE_NAME }}
+    host: <path:{{ SECRETS_PATH }}:{{ HOST }}>
     port: <path:{{ SECRETS_PATH }}:{{ PORT }}>
     dbname : <path:{{ SECRETS_PATH }}:{{ DBNAME }}>
     rds_admin_db_name: <path:{{ SECRETS_PATH }}:{{ RDS_ADMIN_DB_NAME }}>
