--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -67,7 +67,7 @@ spec:
         - name: devops_suite_name
           value: backup-ibm-catalogs
 
-        - name: catalog_backup_version
+        - name: ibm_catalogs_backup_version
           value: $(params.backup_version)
         - name: ibm_catalogs_action
           value: backup
