RDS Jinja template

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
@@ -8,4 +8,25 @@ user: <path:{{ SECRETS_PATH }}:{{ USER_NAME }}>
 password: <path:{{ SECRETS_PATH }}:{{ PASSWORD }}> # pragma: allowlist secret
 jdbc_connection_url: <path:{{ SECRETS_PATH }}:{{ JDBC_CONNECTION_URL }}>
 jdbc_connection_url_additional_params: {{ JDBC_CONNECTION_URL_ADDITIONAL_PARAMS }}
+jdbc_route: {{ JDBC_ROUTE }}
 replica_db: {{ REPLICA_DB }}
+db2_instance_registry:
+  {% filter indent(width=2) -%}
+  {{ DB2_INSTANCE_REGISTRY }}
+  {%- endfilter %}
+db2_database_db_config:
+  {% filter indent(width=2) -%}
+  {{ DB2_DATABASE_DB_CONFIG }}
+  {%- endfilter %}
+{% if DB2_ADDONS_AUDIT_CONFIG %}
+db2_addons_audit_config:
+  {% filter indent(width=2) -%}
+  {{ DB2_ADDONS_AUDIT_CONFIG }}
+  {%- endfilter %}
+{% endif %}
+{% if DB2_INSTANCE_DBM_CONFIG %}
+db2_instance_dbm_config:
+  {% filter indent(width=2) -%}
+  {{ DB2_INSTANCE_DBM_CONFIG }}
+  {%- endfilter %}
+{% endif %}
