--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -871,6 +871,14 @@ spec:
           value: iot
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_iot)
+        - name: db2_instance_registry_yaml
+          value: $(params.db2_instance_registry_yaml_iot)
+        - name: db2_instance_dbm_config_yaml
+          value: $(params.db2_instance_dbm_config_yaml_iot)
+        - name: db2_database_db_config_yaml
+          value: $(params.db2_database_db_config_yaml_iot)
+        - name: db2_addons_audit_config_yaml
+          value: $(params.db2_addons_audit_config_yaml_iot)
 
       workspaces:
         - name: configs
@@ -1075,7 +1083,14 @@ spec:
           value: $(params.replica_db_manage)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_manage)
-
+        - name: db2_instance_registry_yaml
+          value: $(params.db2_instance_registry_yaml_manage)
+        - name: db2_instance_dbm_config_yaml
+          value: $(params.db2_instance_dbm_config_yaml_manage)
+        - name: db2_database_db_config_yaml
+          value: $(params.db2_database_db_config_yaml_manage)
+        - name: db2_addons_audit_config_yaml
+          value: $(params.db2_addons_audit_config_yaml_manage)
       workspaces:
         - name: configs
           workspace: configs
@@ -1085,13 +1100,13 @@ spec:
           kind: Task
           name: gitops-rds-db2-database
       when:
-        - input: "$(params.db2_action_iot)"
+        - input: "$(params.db2_action_manage)"
           operator: notin
           values: [""]
-        - input: "$(params.jdbc_type_iot)"
+        - input: "$(params.jdbc_type_manage)"
           operator: in
           values: ["rds-db2"]
-        - input: "$(params.mas_app_channel_iot)"
+        - input: "$(params.mas_app_channel_manage)"
           operator: notin
           values: [""]
     # 3.2 DB2 for Manage
@@ -1415,6 +1430,14 @@ spec:
           value: $(params.replica_db_facilities)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_facilities)
+        - name: db2_instance_registry_yaml
+          value: $(params.db2_instance_registry_yaml_facilities)
+        - name: db2_instance_dbm_config_yaml
+          value: $(params.db2_instance_dbm_config_yaml_facilities)
+        - name: db2_database_db_config_yaml
+          value: $(params.db2_database_db_config_yaml_facilities)
+        - name: db2_addons_audit_config_yaml
+          value: $(params.db2_addons_audit_config_yaml_facilities)
 
       workspaces:
         - name: configs
