--- a/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
@@ -25,6 +25,15 @@ spec:
     - name: avp_aws_secret_region
       type: string
 
+    - name: db2_instance_registry_yaml
+      type: string
+    - name: db2_instance_dbm_config_yaml
+      type: string
+    - name: db2_addons_audit_config_yaml
+      type: string
+    - name: db2_database_db_config_yaml
+      type: string
+
     - name: mas_instance_id
       type: string
     - name: mas_app_id
@@ -56,10 +65,22 @@ spec:
         value: $(params.github_repo)
       - name: SM_AWS_REGION
         value: $(params.avp_aws_secret_region)
+
+      - name: DB2_INSTANCE_REGISTRY_YAML
+        value: $(params.db2_instance_registry_yaml)
+      - name: DB2_INSTANCE_DBM_CONFIG_YAML
+        value: $(params.db2_instance_dbm_config_yaml)
+      - name: DB2_ADDONS_AUDIT_CONFIG_YAML
+        value: $(params.db2_addons_audit_config_yaml)
+      - name: DB2_DATABASE_DB_CONFIG_YAML
+        value: $(params.db2_database_db_config_yaml)
+
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
       - name: MAS_APP_ID
         value: $(params.mas_app_id)
+      - name: JDBC_ROUTE
+        value: $(params.jdbc_route)
       - name: JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
         value: $(params.jdbc_connection_url_additional_params)
       - name: REPLICA_DB
