RDS Jinja template

--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -871,6 +871,8 @@ spec:
           value: iot
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_iot)
+        - name: jdbc_route
+          value: $(params.jdbc_route_iot)
         - name: db2_instance_registry_yaml
           value: $(params.db2_instance_registry_yaml_iot)
         - name: db2_instance_dbm_config_yaml
@@ -1083,6 +1085,10 @@ spec:
           value: $(params.replica_db_manage)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_manage)
+        - name: jdbc_route
+          value: $(params.jdbc_route_manage)
+        - name: manually_set_enhanced_hadr
+          value: $(params.manually_set_enhanced_hadr_manage)
         - name: db2_instance_registry_yaml
           value: $(params.db2_instance_registry_yaml_manage)
         - name: db2_instance_dbm_config_yaml
@@ -1430,6 +1436,10 @@ spec:
           value: $(params.replica_db_facilities)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_facilities)
+        - name: jdbc_route
+          value: $(params.jdbc_route_facilities)
+        - name: manually_set_enhanced_hadr
+          value: $(params.manually_set_enhanced_hadr_facilities)
         - name: db2_instance_registry_yaml
           value: $(params.db2_instance_registry_yaml_facilities)
         - name: db2_instance_dbm_config_yaml
