add python devops changes

--- a/tekton/src/pipelines/taskdefs/core/suite-install.yml.j2
+++ b/tekton/src/pipelines/taskdefs/core/suite-install.yml.j2
@@ -56,6 +56,10 @@
       value: $(params.allow_custom_cache_key)
     - name: mas_routing_mode
       value: $(params.mas_routing_mode)
+    - name: mas_ingress_controller_name
+      value: $(params.mas_ingress_controller_name)
+    - name: mas_configure_ingress
+      value: $(params.mas_configure_ingress)
     - name: mas_manual_cert_mgmt
       value: $(params.mas_manual_cert_mgmt)
     - name: mas_trust_default_cas
