--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -283,7 +283,7 @@ spec:
         - name: dro_namespace
           value: $(params.dro_namespace)
         - name: dro_storage_class
-          value: $(params.storage_class_rwo)
+          value: $(params.dro_storage_class)
 
       when:
         - input: "$(params.include_dro)"
@@ -319,20 +319,20 @@ spec:
 
         - name: suite_backup_version
           value: $(params.restore_version)
-        - name: mas_domain
-          value: $(params.mas_domain)
+        - name: mas_domain_on_restore
+          value: $(params.mas_domain_on_restore)
 
         - name: include_sls_from_backup
           value: $(params.include_sls)
-        - name: sls_url
-          value: $(params.sls_url)
+        - name: sls_url_on_restore
+          value: $(params.sls_url_on_restore)
         - name: sls_cfg_file
           value: $(params.sls_cfg_file)
 
         - name: include_dro_from_backup
           value: $(params.include_dro)
-        - name: bas_url
-          value: $(params.bas_url)
+        - name: dro_url_on_restore
+          value: $(params.dro_url_on_restore)
         - name: dro_cfg_file
           value: $(params.dro_cfg_file)
 
