--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -69,7 +69,7 @@ spec:
 
         - name: devops_suite_name
           value: download-backup-archive
-        - name: backup_version
+        - name: restore_version
           value: $(params.restore_version)
         - name: backup_archive_name
           value: $(params.backup_archive_name)
