--- a/tekton/src/tasks/suite-install.yml.j2
+++ b/tekton/src/tasks/suite-install.yml.j2
@@ -47,6 +47,14 @@ spec:
       type: string
       description: Optional string parameter, either path or subdomain, defines the network routing mode used for the suite.
       default: ""
+    - name: mas_ingress_controller_name
+      type: string
+      description: Name of the IngressController to use for path-based routing
+      default: ""
+    - name: mas_configure_ingress
+      type: string
+      description: Set to 'true' to automatically configure IngressController for path-based routing
+      default: ""
     - name: mas_trust_default_cas
       type: string
       description: Optional boolean parameter that when set to False, disables the normal trust of well known public certificate authorities
@@ -156,6 +164,10 @@ spec:
         value: $(params.mas_cluster_issuer)
       - name: MAS_ROUTING_MODE
         value: $(params.mas_routing_mode)
+      - name: MAS_INGRESS_CONTROLLER_NAME
+        value: $(params.mas_ingress_controller_name)
+      - name: MAS_CONFIGURE_INGRESS
+        value: $(params.mas_configure_ingress)
       - name: MAS_MANUAL_CERT_MGMT
         value: $(params.mas_manual_cert_mgmt)
       - name: MAS_TRUST_DEFAULT_CAS
