--- a/tekton/src/tasks/suite-install.yml.j2
+++ b/tekton/src/tasks/suite-install.yml.j2
@@ -54,7 +54,7 @@ spec:
     - name: mas_configure_ingress
       type: string
       description: Set to 'true' to automatically configure IngressController for path-based routing
-      default: ""
+      default: "False"
     - name: mas_trust_default_cas
       type: string
       description: Optional boolean parameter that when set to False, disables the normal trust of well known public certificate authorities
