--- a/tekton/src/tasks/dependencies/mongodb.yml.j2
+++ b/tekton/src/tasks/dependencies/mongodb.yml.j2
@@ -68,7 +68,7 @@ spec:
       default: ""
 
     # Backup/Restore specific parameters
-    - name: backup_version
+    - name: mongodb_backup_version
       type: string
       description: Optional. Version/timestamp for the backup
       default: ""
@@ -162,7 +162,7 @@ spec:
       - name: MAS_BACKUP_DIR
         value: /workspace/backups
       - name: MONGODB_BACKUP_VERSION
-        value: $(params.backup_version)
+        value: $(params.mongodb_backup_version)
       - name: MONGODB_INSTANCE_NAME
         value: $(params.mongodb_instance_name)
 
